--- a/assets/xplore-joy.css
+++ b/assets/xplore-joy.css
@@ -464,10 +464,12 @@
     .hero-img-1{
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
     .hero-img-2{
         right: 10px;
         top: 10px;
+        object-fit: cover;
     }
     .activities{
         width: 100%;
