--- a/assets/doodling.css
+++ b/assets/doodling.css
@@ -422,6 +422,7 @@
         bottom: 0px;
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
     .sign-link{
         position: absolute;
